--- a/cwd/templates/layouts/default.html
+++ b/cwd/templates/layouts/default.html
@@ -6,7 +6,7 @@
         <div id="main">
             <div class="main-wrapper">
                 <!-- Header Part Start-->
-                @@include('includes/nav.html',{
+                @@include('nav.html',{
                 "memberlevel": "manger,staff"
                 })
 
