Makes it not break on HTML error -

--- a/cwd/templates/layouts/default.html
+++ b/cwd/templates/layouts/default.html
@@ -4,7 +4,10 @@
         <link rel="stylesheet" type="text/css" href="../../skin.css">
 </head>
 <body>
-<div class="class1">So every time i save either the HTML or LESS it does a</div>
+
+@@include('jobs/card-job-item.html')
+
+
 
 </body>
 </html>
