--- a/cwd/assets/less/example.less
+++ b/cwd/assets/less/example.less
@@ -12,9 +12,10 @@
 }
 
 body {
-	background-color: @color-base;
+	background-color: red;
 }
 
 .cute {
-	background-color: blue;
+	background-color: green;
+	font-size: 100px;
 }
