Revert "0.4 - LESS dosen't burn everything down in a horrible disaster - now just recompiles."
This reverts commit bcefedea55ac590db59c7878cb1473374d03c5b9.

--- a/cwd/assets/less/example.less
+++ b/cwd/assets/less/example.less
@@ -12,10 +12,9 @@
 }
 
 body {
-	background-color: red;
+	background-color: @color-base;
 }
 
 .cute {
-	background-color: green;
-	font-size: 100px;
+	background-color: blue;
 }
