--- a/cwd/templates/layouts/index.html
+++ b/cwd/templates/layouts/index.html
@@ -8,82 +8,64 @@
         <link rel="stylesheet" href="/skin.css">
     </head>
     <body>
-
         @@include('primary-nav.html')
 
-        
         <div class="jumbotron">
             <div class="container">
                 <h1 class="text-center">Finding Jobs,<br> Changing Lives</h1>
-
                 <div class="col-lg-4 col-md-offset-4 pill">
-
                     <input type="text" class="form-control col-lg-9 " placeholder="Text input">
                     <button type="submit" class="btn btn-circle col-lg-2"><span class="glyphicon glyphicon-search"></span></button>
-
                 </div>
-
             </div>
         </div>
-
         @@include('color-nav.html')
-
         <div class='container big-box'>
             <div class='row'>
                 <h1 class="col-lg-6">Just for you</h1>
-                 <a href="" class="btn btn-default pill-button pull-right">
-                    <span>View all</span><i class="glyphicon glyphicon-chevron-right circle"></i>
-                 </a>
+                <a href="" class="btn btn-default pill-button pull-right">
+                <span>View all</span><i class="glyphicon glyphicon-chevron-right circle"></i>
+                </a>
             </div>
             <div class='row news-box'>
-                <div class='col-xs-4'>
-                    <h3>Meet your MAX-Match</h3>
-                    <em>Posted by:</em><span>MAX Employment</span>
-                    <p>Nosectas apit, arciendam quiasp
-                    Nosectas apit, arciendam quiaspNosectas apit, arciendam quiasp
-                    Nosectas apit, arciendam quiasp
-                    </p>
-                    <div class='read-more-box'>
-                        Read More
-                        <img src='right-arrow.gif'/>
-                    </div>
-                </div>
-                <div class='col-xs-4'>
-                    <h3>Ace your interview in 5 questions</h3>
-                    <em>Posted by:</em><span>MAX Employment</span>
-                    <p>Nosectas apit, arciendam quiasp
-                    Nosectas apit, arciendam quiaspNosectas apit, arciendam quiasp
-                    Nosectas apit, arciendam quiasp
-                    </p>
-                </div>
-                <div class='col-xs-4'>
-                    <h3>Three ways to stand out in a crowd</h3>
-                    <em>Posted by:</em><span>MAX Employment</span>
-                    <p>Nosectas apit, arciendam quiasp
-                    Nosectas apit, arciendam quiaspNosectas apit, arciendam quiasp
-                    Nosectas apit, arciendam quiasp
-                    </p>
-                </div>
-            </div>
-        </div>
-        <section id="todays_tips" class="jumbotron">
-            <article class="container">
+
                 <div class="col-lg-4">
-                    <h1>Today's Tip</h1>
-                    <p class="subheading">New threats. Amazing Spider-Man is the cornerstone of the Marvel Universe. Now with a new outlook on life.
-                    </p>
-                    <p>New threats. Amazing Spider-Man is the cornerstone of the Marvel Universe. 
-                    </p>
-                    <a href="" class="btn btn-default pill-button">
-                    <span>Read More</span><i class="glyphicon glyphicon-chevron-right circle"></i>
-                    </a>
-                </div>
-            </article>
-        </section>
-        <div class='row grey_bg'>
-            <div id="job_talk" class='container'>
-        <h1>Job Talk</h1>
-                <div class='speak-box col-xs-4'>
+                    <article class="card-article white" >
+
+                   <small>Twitter</small>
+                    <p>New threats. Amazing Spider-Man is the cornerstone of the Marvel Universe. Now with a new outlook on life.</p>
+                    <footer class="meta">
+                        <span class="pull-left">Read More</span>
+
+                        <i class="pull-right glyphicon glyphicon-chevron-right circle"></i>
+                    </footer>
+                    <i class="tri"></i>
+
+               
+                </article>
+            </div>
+
+        </div>
+    </div>
+    <section id="todays_tips" class="jumbotron">
+        <article class="container">
+        <div class="col-lg-4">
+            <h1>Today's Tip</h1>
+            <p class="subheading">New threats. Amazing Spider-Man is the cornerstone of the Marvel Universe. Now with a new outlook on life.
+            </p>
+            <p>New threats. Amazing Spider-Man is the cornerstone of the Marvel Universe.
+            </p>
+            <a href="" class="btn btn-default pill-button">
+            <span>Read More</span><i class="glyphicon glyphicon-chevron-right circle"></i>
+            </a>
+        </div>
+        </article>
+    </section>
+    <div class='row grey_bg'>
+        <div id="job_talk" class='container'>
+            <h1>Job Talk</h1>
+            <div class='col-lg-4'>
+                <div class="card-chatbubble white">
                     <small>You're not alone</small>
                     <p>New threats. Amazing Spider-Man is the cornerstone of the Marvel Universe. Now with a new outlook on life.</p>
                     <footer class="meta">
@@ -91,15 +73,37 @@
                         <i class="pull-right glyphicon glyphicon-knight circle"></i>
                         <i class="pull-right glyphicon glyphicon-knight circle"></i>
                     </footer>
+                    <i class="tri"></i>
                 </div>
-                <div class='col-xs-4'>
+            </div>
+            <div class='col-lg-4'>
+                <div class="card-chatbubble  purple">
+                    <small>Facebook</small>
+                    <p>New threats. Amazing Spider-Man is the cornerstone of the Marvel Universe. Now with a new outlook on life.</p>
+                    <footer class="meta">
+                        <span class="pull-left">Read More</span>
+
+                        <i class="pull-right glyphicon glyphicon-chevron-right circle"></i>
+                    </footer>
+                    <i class="tri"></i>
                 </div>
-                <div class='col-xs-4'>
+            </div>
+            <div class='col-lg-4'>
+                <div class="card-chatbubble cyan">
+                    <small>Twitter</small>
+                    <p>New threats. Amazing Spider-Man is the cornerstone of the Marvel Universe. Now with a new outlook on life.</p>
+                    <footer class="meta">
+                        <span class="pull-left">Read More</span>
+
+                        <i class="pull-right glyphicon glyphicon-chevron-right circle"></i>
+                    </footer>
+                    <i class="tri"></i>
                 </div>
             </div>
         </div>
-        
-        @@include('footer.html')
-        
-    </body>
+    </div>
+
+    @@include('footer.html')
+
+</body>
 </html>
