Home - Less Files

--- a/cwd/assets/less/homepage.less
+++ b/cwd/assets/less/homepage.less
@@ -18,32 +18,10 @@
 	}
 }
 #job_talk {
+	padding: 0em 0em 5em 0;
 	h1 {
 		.heading(2em 0 0.7em 0,@purple-dark)
 	}
 }
 
-.speak-box {
-	background: #fff;
-	padding:2em;
-	small {
-		font-weight: bold;
-		color:@purple;
-		font-size:1.1em;
-		margin: 0 0 1em 0em;
-		display: block;
-	}
-	p { 
-		font-size: 1.7em;
-		font-weight: bold;
-		color:@purple-dark;
-		
-	}
-	.meta {
-		font-weight: bold;
-		i {
-			color:#fff;
-			.circle(2em,@purple)
-		}
-	}
-}
+
