--- a/cwd/assets/less/variables.less
+++ b/cwd/assets/less/variables.less
@@ -1,3 +1,6 @@
+/*==============================
+=            Colors            =
+==============================*/
 @purple :#5148CB;
 @purple-dark : #211856;
 
@@ -12,8 +15,24 @@
 
 @grey: #EBEFF2;
 
-
-
+@blue: #5167DB;
+/*===================================
+=            Button Vars            =
+===================================*/
 @pill: 500px;
+
+
+
+
+
+
+
+/*=============================
+=            Cards            =
+=============================*/
+@card-chatbubble-size: 20px; 
+
+
+
 
 
