--- a/cwd/assets/less/jumbotrons.less
+++ b/cwd/assets/less/jumbotrons.less
@@ -1,4 +1,7 @@
 .jumbotron {
 	margin: 0px;
 	border:0px;
+	color:#fff;
+	min-height: 520px;
+	background-image: url(http://www.marvelipsum.com/1500/520/random);
 }
