--- a/cwd/assets/less/navbars.less
+++ b/cwd/assets/less/navbars.less
@@ -1,3 +1,5 @@
+
+
 #primary-nav {
 	border-bottom: 1px solid #999;
     nav {
@@ -8,6 +10,10 @@
 #color-nav {
 	margin: 0px;
 	border:0px;
+	.navbar {
+	border:0px;
+	margin: 0px;
+	}
 	li a:hover {
 		background: @purple-dark;
 	} 
