--- a/cwd/templates/layouts/index.html
+++ b/cwd/templates/layouts/index.html
@@ -10,7 +10,7 @@
     <body>
         @@include('primary-nav.html')
 
-        <div class="jumbotron">
+        <div class="jumbotron purple_bg">
             <div class="container">
                 <h1 class="text-center">Finding Jobs,<br> Changing Lives</h1>
                 <div class="col-lg-4 col-md-offset-4 pill">
@@ -20,19 +20,22 @@
             </div>
         </div>
         @@include('color-nav.html')
-        <div class='container big-box'>
-            <div class='row'>
+        <div class='row grey_bg'>
+            <div class='container'>
                 <h1 class="col-lg-6">Just for you</h1>
                 <a href="" class="btn btn-default pill-button pull-right">
                 <span>View all</span><i class="glyphicon glyphicon-chevron-right circle"></i>
                 </a>
             </div>
-            <div class='row news-box'>
+            <div class='container news-box'>
 
                 <div class="col-lg-4">
                     <article class="card-article white" >
-
-                   <small>Twitter</small>
+                    <img src="http://www.marvelipsum.com/280/170/deadpool" alt="">
+                    <header>
+                   <h1>Twitter</h1>
+                   <span class="meta"><b>Posted by</b><a href="#">Max Employment</a></span>
+                   </header>
                     <p>New threats. Amazing Spider-Man is the cornerstone of the Marvel Universe. Now with a new outlook on life.</p>
                     <footer class="meta">
                         <span class="pull-left">Read More</span>
@@ -50,6 +53,7 @@
     <section id="todays_tips" class="jumbotron">
         <article class="container">
         <div class="col-lg-4">
+
             <h1>Today's Tip</h1>
             <p class="subheading">New threats. Amazing Spider-Man is the cornerstone of the Marvel Universe. Now with a new outlook on life.
             </p>
