New - Less Files

--- a/cwd/assets/less/cards.less
+++ b/cwd/assets/less/cards.less
@@ -59,21 +59,29 @@
 	display: block;
 	float:left;
 	padding: 2em 2em 1em 2em;
+	margin: 0 0 2em 0;
 	position: relative;
 	h1 {
 		font-weight: bold;
 		color:@header_color;
 		font-size:2em;
-		margin: 0 0 1em 0em;
+		margin: 1em 0 1em 0em;
 		display: block;
 	}
 	.meta {
-
+	margin: 1em 0em;
+	display: block;
+	a {
+		color:@purple;
+		font-weight: bold;
+		margin: 0 0 0 0.2em;
+	}
 	}
 	p { 
 		font-size: 1.4em;
-		font-weight: bold;
+		font-weight: normal;
 		color:@text_color;
+		margin: 0 0 2em 0;
 		
 	}
 	footer {
@@ -92,7 +100,7 @@
 	}
 }
 .card-article {
-	.card-article(#fff,@purple-dark,@purple,@purple,@purple-dark)
+	.card-article(#fff,@purple-dark,@purple-dark,@purple,@purple-dark)
 }
 
 
