--- a/cwd/assets/less/jumbotrons.less
+++ b/cwd/assets/less/jumbotrons.less
@@ -3,5 +3,8 @@
 	border:0px;
 	color:#fff;
 	min-height: 520px;
-	background-image: url(http://www.marvelipsum.com/1500/520/random);
+	background-image: url('/assets/images/homepage-jumbotron.jpg');
+	background-position: right;
+	background-repeat: no-repeat;
+	background-color: @purple-alt;
 }
