--- a/cwd/assets/less/variables.less
+++ b/cwd/assets/less/variables.less
@@ -3,6 +3,7 @@
 ==============================*/
 @purple :#5148CB;
 @purple-dark : #211856;
+@purple-alt: #483FB6;
 
 @yellow : #FFC93E;
 @yellow-dark : #E5AA03;
