2nd of April Commit (Footer / Blog / additional)

--- a/cwd/assets/less/variables.less
+++ b/cwd/assets/less/variables.less
@@ -16,6 +16,8 @@
 @grey: #EBEFF2;
 
 @blue: #5167DB;
+
+@white: #FFFFFF;
 /*===================================
 =            Button Vars            =
 ===================================*/
