--- a/cwd/includes/footer.html
+++ b/cwd/includes/footer.html
@@ -8,8 +8,8 @@
         </div>
         </footer>
         <div class="container">
-            <ul>
-                <li><a href="#">Copyright</a></li>
+            <ul id="footer">
+                <li><a href="#">&copy; Copyright 2015 MAX Employment</a></li>
                 <li><a href="#">Pricacy</a></li>
                 <li><a href="#">Admin</a></li>
                 <li><a href="#">Sitemap</a></li>
