--- a/cwd/includes/primary-nav.html
+++ b/cwd/includes/primary-nav.html
@@ -1,7 +1,7 @@
  <header id="primary-nav" class="row navbar-default">
             <div class="container">
                 <nav class="navbar  navbar-static-top">
-                    <div id="logo" class='col-lg-3'>MaxConnect</div>
+                    <div id="logo" class='col-lg-3'>@@include('max-logo.html')</div>
                     <ul  class="nav nav-pills col-lg-5" >
                         <li><a href="#">Latest</a></li>
                         <li><a href="#">Tools & resources</a></li>
