--- a/cwd/assets/less/buttons.less
+++ b/cwd/assets/less/buttons.less
@@ -1,7 +1,29 @@
+
+.btn-purple,
+.btn-default {
+	.pill-button(@purple,#fff,@yellow,@purple-dark)
+}
+.btn-default:hover { background: @purple-dark;}
+
+.btn-cyan {
+	.pill-button(@cyan,#fff,@cyan-dark,@purple-dark)
+
+}
+.btn-orange {
+	.pill-button(@orange,#fff,@orange-dark,#fff)
+}
+
+.btn-dark {
+	.pill-button(@cyan,#fff,@cyan-dark,@purple-dark)
+}
+
+
 .pill {
 	border-radius: @pill;
 	overflow: hidden;
 }
+// Buttons Mixin
+
 //mixin for chevon circles
 .circle(@line_height:1em; @bg_color) {
 	border-radius: 100%;
@@ -20,31 +42,16 @@
 	border:0px;
 	text-shadow:none;
 	box-shadow: none;
-	span {
-	color:@text_color;
-	margin: 0 0.2em 0 0;
-	line-height: 3em;
-	padding: 1em 2em 1em 1em ;
-	}
-	i.circle {
-		color:@icon_color;
-		.circle(2.8em, @icon_bg)
-	}
-}
-.btn-purple,
-.btn-default {
-	.pill-button(@purple,#fff,@yellow,@purple-dark)
-}
-.btn-default:hover { background: @purple-dark;}
+	
+		span {
+		color:@text_color;
+		margin: 0 0.2em 0 0;
+		line-height: 3em;
+		padding: 1em 2em 1em 1em ;
+		}
 
-.btn-cyan {
-	.pill-button(@cyan,#fff,@cyan-dark,@purple-dark)
-
-}
-.btn-orange {
-	.pill-button(@orange,#fff,@orange-dark,#fff)
-}
-
-.btn-dark {
-	.pill-button(@cyan,#fff,@cyan-dark,@purple-dark)
+		i.circle {
+			color:@icon_color;
+			.circle(2.8em, @icon_bg)
+		}
 }
