--- a/cwd/assets/less/variables.less
+++ b/cwd/assets/less/variables.less
@@ -4,6 +4,7 @@
 @purple :#5148CB;
 @purple-dark : #211856;
 @purple-alt: #483FB6;
+@purple-darkest: #171249;
 
 @yellow : #FFC93E;
 @yellow-dark : #E5AA03;
