--- a/cwd/includes/footer.html
+++ b/cwd/includes/footer.html
@@ -1,22 +1,32 @@
-<div class='row purple_bg'>
-        <footer>
-        <div class="container">
-            <img src='house.gif'><span>MAX Employment</span>
-            <p class="subheading">
-            Finding jobs, changing lives lorem ipsum do
-            </p>
+<div class='row'>
+        <footer class="purple_bg">
+        <div class="container" >
+            <div class="row">
+                <div class="col-md-3">
+<div class="max-logo-container">
+<object type="image/svg+xml" data="../assets/images/max-house-footer.svg">Your browser does not support SVG</object>
+</div>
+            <h2>
+            Finding jobs, changing lives lorem ipsum dolor sitar indran tell greario
+            </h2>
+            </div>
+        </div>
         </div>
         </footer>
-        <div class="container">
-            <ul id="footer">
+
+        <div id="footer" class="">
+            <div class="container">
+            <ul>
                 <li><a href="#">&copy; Copyright 2015 MAX Employment</a></li>
                 <li><a href="#">Pricacy</a></li>
                 <li><a href="#">Admin</a></li>
                 <li><a href="#">Sitemap</a></li>
                 <li><a href="#">Max sites</a></li>
-                <li><a href="#">1800 289 </a></li>
-                <li><a href=""></a></li>
+                <li><a href="#">1800 289 114</a></li>
+                <li><a href="#">info@maxconnect.com.au</a></li>
             </ul>
         </div>
-        <script src="/assets/js/main.js"></script>
         </div>
+        <script src="/assets/js/main.js"></script>
+                </div>
+
