--- a/cwd/assets/less/footers.less
+++ b/cwd/assets/less/footers.less
@@ -1,7 +1,26 @@
 #footer {
 		list-style-type: none;
 		text-decoration: none;
+		background-color: @purple-darkest;
+		padding: 1.5em 0 1.5em 0;
+		ul {
+			padding: 0;
+		}
 	li {
 		display: inline;
+		padding: 1em;
+		a {
+			color: @white;
+		}
+		}
+	}
+
+
+
+
+footer {
+		padding-top: 3.5em;
+	h2 {
+		padding-bottom: 1em;
 	}
 }
