--- a/cwd/templates/layouts/index.html
+++ b/cwd/templates/layouts/index.html
@@ -13,12 +13,7 @@
             <div class="container">
                 <h1 class="text-center">Finding Jobs,<br> Changing Lives</h1>
                 <div class="col-lg-4 col-md-offset-4">
-                    <div class="search-box">
-                        <input type="text" class="form-control col-lg-9 " placeholder="Text input">
-                        <button type="submit" class="btn btn-circle col-lg-2">
-                            <i class="glyphicon glyphicon-search circle"></i>
-                        </button>
-                    </div>
+        @@include('search-box.html')
                 </div>
             </div>
         </div>
