Additional Changes to a bunch of stuff

--- a/cwd/assets/less/cards.less
+++ b/cwd/assets/less/cards.less
@@ -23,6 +23,7 @@
 	.meta {
 		margin: 2em 0 0 0;
 		font-weight: bold;
+		border-top: solid 10px #CCC;
 		span {
 			font-size: 0.9em;
 			color:@button_text;
