--- a/cwd/assets/less/navbars.less
+++ b/cwd/assets/less/navbars.less
@@ -1,12 +1,18 @@
 
 
 #primary-nav {
+	padding-top: 1.5em;
 	border-bottom: 1px solid #999;
+
     nav {
         li {} 
         a { color: @purple-dark; }
     }
+    .center-navigation {
+    	
+    }
 }
+
 #color-nav {
 	margin: 0px;
 	border:0px;
@@ -85,4 +91,8 @@
 			font-weight: bold;
 		}
 	}
+}
+
+.max-logo-container {
+	width: 75%;
 }
