--- a/cwd/includes/color-nav.html
+++ b/cwd/includes/color-nav.html
@@ -2,7 +2,7 @@
             <div class='row'>
                 <nav class="navbar ">
                     <ul  class="nav nav-pills" >
-                        <li class="col-lg-2"><a href="#"><span>How We Help You </span><i class="glyphicon glyphicon-menu-right circle"></i></a></li>
+                        <li class="col-lg-2"><a href="index.html"><span>How We Help You </span><i class="glyphicon glyphicon-menu-right circle"></i></a></li>
                         <li class="col-lg-2"><a href="#"><span>Getting Started </span><i class="glyphicon glyphicon-menu-right circle"></i></a></li>
                         <li class="col-lg-2"><a href="#"><span>My Profile      </span><i class="glyphicon glyphicon-menu-right circle"></i></a></li>
                         <li class="col-lg-2"><a href="#"><span>My Resume       </span><i class="glyphicon glyphicon-menu-right circle"></i></a></li>
