--- a/cwd/templates/layouts/index.html
+++ b/cwd/templates/layouts/index.html
@@ -32,8 +32,9 @@
                @@include('collections/blog/card-article.html')
                @@include('collections/blog/card-article.html')
                @@include('collections/blog/card-article.html')
-
-                
+               @@include('collections/blog/card-article.html')
+               @@include('collections/blog/card-article.html')
+               @@include('collections/blog/card-article.html')
             </div>
             </div>
         </div>
@@ -52,7 +53,7 @@
             <div class="col-lg-8">
             <div class="video-player">
                 <i class="glyphicon glyphicon-triangle-right circle"></i>
-                <img class="img-responsive" src="http://www.marvelipsum.com/650/430/ironman" alt="">
+              
              <div class="embed-responsive embed-responsive-16by9">
               <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/JAUoeqvedMo" frameborder="0" allowfullscreen></iframe>
               </div>
