--- a/cwd/assets/less/forms.less
+++ b/cwd/assets/less/forms.less
@@ -3,10 +3,11 @@
 = Example location - homepage center
 =========================================*/
 .search-box {
-	background:@purple-dark;
+	background:@purple;
 	display: block;
 	padding: 0.3em 0em 0.3em 0.3em;
 	border-radius: @pill;
+	color: @white;
 
 	overflow: hidden;
 	button {
