Fix - Hover on Blog Article Cards

--- a/cwd/includes/collections/blog/card-article.html
+++ b/cwd/includes/collections/blog/card-article.html
@@ -6,10 +6,13 @@
         <span class="meta"><b>Posted by</b><a href="#">Max Employment</a></span>
     </header>
     <p>New threats. Amazing Spider-Man is the cornerstone of the Marvel Universe. Now with a new outlook on life.</p>
-    <footer class="meta">
+    
+    <footer>
+    <a href="#">
         <span class="pull-left">Read More</span>
         <i class="pull-right glyphicon glyphicon-chevron-right circle"></i>
-    </footer>
     <i class="tri"></i>
+    </a>
+    </footer>
     </article>
 </div>
