--- a/cwd/assets/less/cards.less
+++ b/cwd/assets/less/cards.less
@@ -88,15 +88,27 @@
 	footer {
 		margin: 2em 0 0 0;
 		font-weight: bold;
+		a {
+			display: block;
+			font-weight: bold;
+		}
+		
 		span {
 			font-size: 0.9em;
 			color:@button_text;
 
 		}
+
 		i {
 			color:#fff;
 			margin: 0 0.2em 0em 0;
 			.circle(2em,@button_color)
+		}
+		a:hover span {
+			color:@yellow-dark;
+		}
+		a:hover i {
+			background:@yellow-dark;
 		}
 	}
 }
