Search box - Include Move and Vars

--- a/cwd/includes/search-box.html
+++ b/cwd/includes/search-box.html
@@ -1,4 +1,4 @@
-                    <div class="search-box">
+                    <div class="search-box @@color">
                         <input type="text" class="form-control col-lg-9 " placeholder="Search">
                         <button type="submit" class="btn btn-circle col-lg-2">
                             <i class="glyphicon glyphicon-search circle"></i>
