--- a/cwd/templates/layouts/blog.html
+++ b/cwd/templates/layouts/blog.html
@@ -28,8 +28,8 @@
             </div>
              <div class="row">
                 <div class="col-md-3">
-              @@include('blog/sidebar-details.html')
-              @@include('blog/sidebar-share.html')
+              @@include('blog/collections/sidebar-details.html')
+              @@include('blog/collections/sidebar-share.html')
                 </div>
                 <div class="col-md-6">
 <h2>It’s true – interviews can be intimidating, and even the best of us get tongue-tied. But you’ll be happy to hear that there are a few dos and don’ts that can help when you’re in the hotseat. Here’s are the five questions you’re likely to be asked, why they’re asking... and what they really want to hear. </h2>
