collection - rearrage files

--- a/cwd/includes/collections/blog/card-article.html
+++ b/cwd/includes/collections/blog/card-article.html
@@ -1,12 +1,14 @@
 <div class="col-lg-4">
     <article class="card-article white" >
+     <div class="content">
     <img src="http://www.marvelipsum.com/280/170/random" alt="">
+
     <header>
         <h1>The Avengers will assemble once again.</h1>
         <span class="meta"><b>Posted by</b><a href="#">Max Employment</a></span>
     </header>
     <p>New threats. Amazing Spider-Man is the cornerstone of the Marvel Universe. Now with a new outlook on life.</p>
-    
+    </div>
     <footer>
     <a href="#">
         <span class="pull-left">Read More</span>
