--- a/cwd/includes/collections/blog/sidebar-details.html
+++ b/cwd/includes/collections/blog/sidebar-details.html
@@ -1,8 +1,6 @@
 <div class="sidebar-blog">
     @@include('search-box.html',{
-    "color": "purple",
-    "collection": "",
-    "resultsPage": ""
+    "color": "purple"
     })
     <ul>
         <li>Date Posted: <span class="paragraph-light">26th January 2015</span></li>
