--- a/cwd/assets/less/forms.less
+++ b/cwd/assets/less/forms.less
@@ -2,7 +2,7 @@
 =            Common Search box            =
 = Example location - homepage center
 =========================================*/
-.search-box(@background,@text-color,,@circle-color,@icon-color) {
+.search-box(@background,@text-color,@circle-color,@icon-color) {
 	box-shadow: none;
 	background:@background;
 	display: block;
@@ -50,5 +50,5 @@
 	.search-box(@purple,@white,@yellow,@purple-dark)
 }
 .search-box.purple {
-	.search-box(@white,@purple,@yellow,@purple-dark)
+	.search-box(@purple,@white,@yellow,@purple-dark)
 }
