Fix - Homepage Search

--- a/cwd/assets/less/forms.less
+++ b/cwd/assets/less/forms.less
@@ -1,6 +1,6 @@
 /*=========================================
 =            Common Search box            =
-= Example location - homepage center
+    Example location - homepage center
 =========================================*/
 .search-box(@background,@text-color,@circle-color,@icon-color) {
 	box-shadow: none;
@@ -47,7 +47,7 @@
 
 
 .search-box {
-	.search-box(@purple,@white,@yellow,@purple-dark)
+	.search-box(@purple-dark,@white,@yellow,@purple-dark)
 }
 .search-box.purple {
 	.search-box(@purple,@white,@yellow,@purple-dark)
